--- a/StateMangMVC/Views/Home/Login.cshtml
+++ b/StateMangMVC/Views/Home/Login.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Login";
 }
 
-<h2>Login</h2>
+<h2>Login h2</h2>
 <hr />
 <form method="post" action="/home/login">
     <label>Enter Username:</label><br />
